Fix gallery layout issues Use flexbox to space photographs evenly in app homepage.

--- a/style/style.css
+++ b/style/style.css
@@ -13,17 +13,26 @@ div.thumb
 {
     width: 99px;
     height: 132px;
-    vertical-align: top;
+    margin: 7px 0px 0px 0px;
     display: inline-block;
-    margin: 0px;
-    border: 2px solid #ccc;
+}
+button {
+    margin-bottom: 0;
 }
 #media-container {
-    width: 310px;
-    background: #ccc;
-    border:1px solid #ccc;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 #contents {
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 320px;
+    height: 360px;
+    background: #ccc;
 }
 #upload-button {
     height:4em;
@@ -34,6 +43,7 @@ div.thumb
     margin: 0 auto;
 }
 #status-bar { 
+    position: relative;
     width:100%; 
     height:50px; 
     background-color:#999; 
